# project_mc859

./: .env.example  .gitignore  README.md  justfile  pyproject.toml  requirements.txt
data-and-network/: README.md  attraction-sentiment-net-info.json  config.yaml  main.py  project.py
data-and-network/Network/: README.md  main.py
data-and-network/Pipeline/: README.md  main.py
data-and-network/Places/: README.md  main.py
data-and-network/PlacesAPI/: README.md  main.py
data-and-network/Scraper/: README.md  config.yaml  main.py
data-and-network/Scraper/modules/: config.py  data_storage.py  image_handler.py  models.py  s3_handler.py  scraper.py  utils.py
data-and-network/Scraper/tests/: conftest.py  test_mongodb_connection.py  test_s3_connection.py
data-and-network/Sentiments/: README.md  main.py
data-and-network/Shared/: README.md
data-and-network/Utils/: main.py
data-and-network/modules/: README.md  cli.py  config.py  data_storage.py  date_converter.py  image_handler.py  s3_handler.py  scraper.py  utils.py
