[project]
name = "Projeto_MC859"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.11.11",
    "beautifulsoup4==4.12.3",
    "boto3==1.35.1",
    "certifi==2024.7.4",
    "dacite>=1.9.2",
    "googletrans==4.0.2",
    "networkx[default]>=3.5",
    "pandas>=2.3.2",
    "pymongo==4.12.0",
    "pytest==7.4.3",
    "pyyaml==6.0.1",
    "requests==2.32.3",
    "selenium==4.15.2",
    "setuptools==79.0.1",
    "tqdm==4.66.3",
    "undetected-chromedriver==3.5.4",
    "vadersentiment>=3.3.2",
    "webdriver-manager==4.0.2",
]
