[project]
name = "Projeto_MC859"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.11.11",
    "beautifulsoup4==4.12.3",
    "boto3==1.35.1",
    "certifi==2024.7.4",
    "dacite>=1.9.2",
    "geopandas>=1.1.1",
    "google-cloud-aiplatform>=1.115.0",
    "googletrans==4.0.2",
    "networkx[default]>=3.5",
    "pandas>=2.3.2",
    "pymongo==4.12.0",
    "pytest==7.4.3",
    "pyyaml==6.0.1",
    "requests==2.32.3",
    "selenium==4.15.2",
    "setuptools==79.0.1",
    "spacy>=3.8.7",
    "tqdm==4.66.3",
    "undetected-chromedriver==3.5.4",
    "vadersentiment>=3.3.2",
    "webdriver-manager==4.0.2",
]

[tool.ruff]
line-length=88
indent-width=4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "ARG", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
known-first-party = ["modules", "Network", "Places", "PlacesAPI", "Scraper", "Sentiments", "Shared", "Pipeline"]
known-third-party = ["requests", "numpy", "dacite"]
combine-as-imports = true
force-sort-within-sections = true

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]
